<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.pixeldroid.media_editor.photoEdit.PhotoEditActivity">

    <LinearLayout
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PhotoEditActivity"
        tools:showIn="@layout/activity_photo_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".70"
            android:scaleType="centerInside"
            android:contentDescription="@string/image_preview" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".22" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".08"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarSaveFile"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".15"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".85"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".7"
        android:orientation="horizontal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cropImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="411dp"
        android:tint="?attr/colorOnBackground"
        android:src="@drawable/ic_crop_black_24dp"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        android:contentDescription="@string/crop_button" />

</androidx.constraintlayout.widget.ConstraintLayout>