<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/thumbnail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="42dp"
    android:layout_height="42dp">

    <ImageView
        android:id="@+id/colorPreview"
        android:layout_margin="1dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/circle_black_24dp"
        app:tint="@color/seed" />

</FrameLayout>