<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="RESET"
        android:icon="@drawable/restore_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="101"
        android:title="SAVE"
        android:icon="@drawable/ic_save_24dp"
        app:showAsAction="ifRoom"/>

</menu>